--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
 }
 .container{
     width: 100%;
-    height: 300px;
+    height: 600px;
     border: 1px solid blue;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    
+    
 }
 .box{
     width: 100px;
